# VKR_To_END

./: FINAL_ANALYSIS.md  VKR_Final_Complete_v10.docx  VKR_Final_Complete_v11.docx  VKR_Final_Complete_v12.docx  VKR_Final_Complete_v13.docx  VKR_Final_Complete_v3.docx  VKR_Final_Complete_v4.docx  VKR_Final_Complete_v5.docx  VKR_Final_Complete_v6.docx  VKR_Final_Complete_v7.docx  VKR_Final_Complete_v8.docx  merge_vkr.py  merge_vkr_full.py  merge_vkr_v2.py  update_abstract.py  ~$R_Final_Complete_v3.docx
.gigaide/: gigaide.properties
AudioAnalyzer/: .coverage  .pre-commit-config.yaml  AudioAnalyzer_Architecture_Analysis.md  AudioAnalyzer_Implementation_Plans.md  CHANGELOG.md  IMPLEMENTATION_REPORT.md  Makefile  README.md  REFACTORING_SUMMARY.md  VKR_Final.docx  VKR_Final.md  audio_analysis_2026-03-22_19-08-43.xlsx  audio_analysis_2026-04-25_16-34-34.xlsx  coverage.xml  pyproject.toml  requirements.txt
AudioAnalyzer/docs/: ARCHITECTURE.md  FULL_DOCUMENTATION.md  FWHT_ANALYSIS.md  metrics_guide.md  processing_workflow.md  theoretical_basis.md
AudioAnalyzer/docs/VKR/: CHAPTERS_ANALYSIS_REPORT.md  MAI_Analysis_Report.md  MAI_Final_Analysis_Report.md  VKR.docx  VKR_1.docx  VKR_2.docx  VKR_Chapter3_Updated.docx  VKR_Final_Complete.docx  VKR_Final_Complete_v2.docx  vkr_end.docx
AudioAnalyzer/docs/diagrams/: .$method_fft.drawio.bkp  architecture_diagram.drawio  audio_pipeline.drawio  class_diagram_gost19.drawio  component_diagram_gost19.drawio  method_dct.drawio  method_dwt.drawio  method_fft.drawio  method_fwht.drawio  method_huffman.drawio  method_rosenbrock.drawio  methods_comparison.drawio  metrics_calculation.drawio  ola_process.drawio  sequence_diagram.drawio  state_diagram_gost19.drawio  transforms_class_diagram.drawio  ui_mixin_diagram.drawio  usecase_diagram.drawio
AudioAnalyzer/scripts/: build.ps1  build_exe.py
AudioAnalyzer/src/: README.md  app.py  config.py
AudioAnalyzer/src/processing/: README.md  __init__.py  api.py  audio_ops.py  codecs.py  metrics.py  parallel_ola.py
AudioAnalyzer/src/processing/transforms/: README.md  __init__.py  base.py  dct.py  dwt.py  extended.py  fft.py  fwht.py  huffman.py  rosenbrock.py
AudioAnalyzer/src/ui_new/: README.md  __init__.py  animations.py  audio_editor.py  cli.py  constants.py  design_system.py  events.py  export_xlsx.py  icons.py  log_handler.py  main_window.py  ml_integration.py  pipeline.py  profiles_new.py  protocols.py  reports.py  repositories.py  themes.py  worker.py
AudioAnalyzer/src/ui_new/components/: README.md  __init__.py  dashboard.py  onboarding.py  shortcuts.py  toast.py  wizards.py
AudioAnalyzer/src/ui_new/mixins/: __init__.py  comparison_mixin.py  files_mixin.py  player_mixin.py  settings_mixin.py  spectrum_mixin.py  worker_mixin.py
AudioAnalyzer/src/ui_new/services/: __init__.py  audio_service.py  config.py  container.py  file_service.py  spectrum_service.py
AudioAnalyzer/src/ui_new/widgets/: __init__.py  results_table.py  spectrogram_3d.py  spectrum_widget.py  spectrum_worker.py
AudioAnalyzer/src/utils/: logging_new.py
AudioAnalyzer/tests/: conftest.py  test_architecture.py  test_codecs.py  test_events.py  test_events_core.py  test_extended.py  test_integration.py  test_new_features.py  test_phase3_components.py  test_pipeline.py  test_processing.py  test_protocols.py  test_reports.py  test_repositories.py  test_transforms.py
AudioAnalyzer/unpacked_vkr/: [Content_Types].xml
AudioAnalyzer/unpacked_vkr/docProps/: app.xml  core.xml
AudioAnalyzer/unpacked_vkr/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml
AudioAnalyzer/unpacked_vkr/word/_rels/: document.xml.rels
AudioAnalyzer/unpacked_vkr/word/theme/: theme1.xml
AudioAnalyzer/vkr_unpacked/docProps/: app.xml  core.xml
AudioAnalyzer/vkr_unpacked/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml
AudioAnalyzer/vkr_unpacked/word/_rels/: document.xml.rels
default_test_data/default_test_data/: README.md
docs/: VKR.docx  VKR_COMPLETE_FINAL.docx  VKR_Complete_Final.docx  VKR_FINAL.docx  VKR_FINAL_COMPLETE.docx  VKR_FINAL_FIXED.docx  VKR_Final.docx  VKR_Final_Complete.docx  VKR_QUALITY_FINAL.docx  VKR_REBUILD_TEMP.docx  VKR_ГОТОВЫЙ_ДОКУМЕНТ.docx  VKR_ИТОГОВЫЙ_ОБРАБОТАННЫЙ.docx  VKR_ИТОГОВЫЙ_ФИНАЛ.docx  VKR_ФИНАЛЬНЫЙ_ДОКУМЕНТ.docx  clean_build.py  final_correction.py  final_fix_all.py  final_fix_ch2.py  final_report.py  finalize_document.py  finalize_vkr.py  generate_figures.py  rebuild_vkr.py  update_vkr_full.py  xml_fix.py
docs/Diplom/: Results.xlsx  generate_formulas_docx.js  generate_omml_docx.js  render_formulas.py  Глава_3_Экспериментальное_исследование.docx  Глава_4_Описание_результатов_применения_разработки.docx  Глава_4_Практическая_значимость.docx  Формулы_метрик_AudioAnalyzer.docx  Формулы_метрик_качества.md  Формулы_метрики_качества.docx  Формулы_метрики_качества.md
docs/Diplom_last/: Formuly_Daubechies_DWT.docx  Glava_4_Obnovlennoe.docx  Glava_4_Opisanie_rezultatov_primenenia_razrabotki.docx  audio_analysis_2026-04-30_15-17-02.xlsx  audio_analysis_2026-04-30_15-55-10.xlsx  audio_analysis_2026-04-30_16-39-02.xlsx  audio_analysis_2026-04-30_18-04-02.xlsx
docs/archive/: VKR_COMPLETE_FINAL.docx  VKR_COMPLETE_WITH_ALL_FIGURES.docx  VKR_Complete.docx  VKR_Complete_Updated.docx  VKR_Corrected.docx  VKR_FINAL_WITH_STATS.docx  VKR_Final_Correct.docx  VKR_Final_Corrected.docx  VKR_Final_Document.docx  VKR_Rebuild.docx  VKR_backup.docx  VKR_ИТОГОВЫЙ.docx
docs/chapters/: VKR_00_front.docx  VKR_01_chapter1.docx  VKR_02_chapter2.docx  VKR_03_chapter3.docx  VKR_04_chapter4.docx  VKR_05_back.docx
docs/drawio/: fig_1_3_wav_to_mp3.drawio  fig_2_2_usecase.drawio  fig_2_5_ola.drawio  fig_2_6_class_hierarchy.drawio  fig_2_7_2_12_processing.drawio  fig_a1_a3_idef0.drawio  fig_a4_a6_dfd.drawio  (+1 more)
download/: VKR_ИТОГОВЫЙ_ОБРАБОТАННЫЙ.docx  vkr_chunk1_fixed.docx  vkr_chunk3_fixed.docx  vkr_comprehensive_analysis.md  vkr_end.docx  vkr_final.docx
test_data/: README.txt
(+80 files in other folders)
